# deepseek_fable_lab

./: .dockerignore  .env.example  .gitignore  Dockerfile.api  Dockerfile.model  README.md  __init__.py  audit_api.py  auth.py  bootstrap_pod.sh  cli.py  collator.py  config.py  data.py  docker-compose.gpu.yml  docker-compose.yml  docker-entrypoint.sh  evaluate_outputs.py  merge_lora.py  prepare_data.py  pyproject.toml  requirements-api.txt  requirements-model.txt  requirements.txt  run_docker.ps1  run_service.ps1  runtime.py  safety_tasks.py  serve.py  task_specs.py  telegram_classify.py  template.py  train_sft.py
examples/: audit_sample.txt  audit_train.jsonl  telegram_sample.jsonl  telegram_train.jsonl  train_sample.jsonl
